--- a/Presentation/src/main/res/values/strings.xml
+++ b/Presentation/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Developers Life</string>
     <string name="tab_latest">Latest</string>
-    <string name="tab_best">Best</string>
+    <string name="tab_top">Top</string>
     <string name="tab_hot">Hot</string>
+
+    <string name="internet_error">An error occurred while loading data. Please, check your network connection</string>
+    <string name="reload">RELOAD</string>
+
+    <string name="empty_error">Oops, nothing here</string>
 </resources>
