--- a/Presentation/src/main/res/values/strings.xml
+++ b/Presentation/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="tab_top">Top</string>
     <string name="tab_hot">Hot</string>
 
-    <string name="internet_error">An error occurred while loading data. Please, check your network connection</string>
+    <string name="internet_error">An error occurred while loading data. Please, check your network connection.</string>
     <string name="reload">RELOAD</string>
 
-    <string name="empty_error">Oops, nothing here</string>
+    <string name="empty_error">Ooops, nothing here</string>
 </resources>
